# serde-example

./: Cargo.toml  README.md
src/: main.rs  resource.yml  urls.json
