[package]
name = "j-reader"
version = "0.1.0"
authors = ["Manoj Kumar MC <mmyali26@in.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_json = "1.0.53"
serde_yaml = "0.8.12"
serde_derive = "1.0.110"
